<resources>
    <string name="app_name">安策调研</string>
    <string name="login_title_1"><u>安策智库</u></string>
    <string name="login_title_2">实地调研系统</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="format_txt_copyright">%s©安策智库</string>
    <string name="task_list">任务清单</string>
    <string name="filter">筛选</string>
    <string name="cur_user">当前用户:</string>
    <string name="change_portrait">更换头像</string>
    <string name="modify_password">修改登录密码</string>
    <string name="logout">退出当前账户</string>
    <string name="user_center">个人中心</string>
    <string name="old_pwd">原密码</string>
    <string name="please_input_old_pwd">请输入原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_new_pwd_again">请再次输入新密码</string>
    <string name="sure_modify">保存修改</string>
    <string name="old_new_pwd_same">新密码与原密码相同</string>
    <string name="new_pwd_not_null">新密码不能为空</string>
    <string name="pwd_not_same">两次输入的新密码不相同</string>
    <string name="old_pwd_not_null">原密码不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="civilization_creation">实地调研</string>
    <string name="all">全部</string>
    <string name="un_start">未开始</string>
    <string name="doing">进行中</string>
    <string name="has_complete">已完成</string>
    <string name="subject_msg">主体信息(实地调研)</string>
    <string name="deduct_remarks">累计扣分</string>
    <string name="exitapp">再按一次退出应用</string>
    <string name="score_empty_tips">暂无评分项纪录</string>
    <string name="task_list_empty_tips">暂无任务</string>
    <string name="save">保存</string>
    <string name="format_find_new_version">发现新版本（%s）</string>
    <string name="next_say">下次再说</string>
    <string name="upgrade_now">立即更新</string>
    <string name="examine_item">考核项目(1级)</string>
    <string name="examine_standard">考核标准(2级)</string>
    <string name="deduct_standard">扣分标准(3级)</string>
    <string name="all_g">共</string>
    <string name="num_deduct">处扣分</string>
    <string name="add_img_title">添加图片(实地照片等)</string>
    <string name="add_location_msg">添加位置信息</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="delete_score">删除评分项？</string>
    <string name="delete_score_tips">删除后不可再恢复</string>
    <string name="map">地图</string>
    <string name="screenshot">截图</string>
    <string name="add_score">＋</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="add_score_item">新增评分记录项</string>
    <string name="edit_score_item">编辑评分记录项</string>
    <string name="delete_fail">删除失败</string>
    <string name="item_title">请选择考核项目(1级)</string>
    <string name="standard_title">选择考核标准(2级)</string>
    <string name="error_select_1">请先选择一个考核项目</string>
    <string name="error_select_2">请先选择一个考核标准</string>
    <string name="deduct_title">选择扣分标准(3级)</string>
    <string name="save_fail">保存失败</string>
    <string name="save_modify">保存修改</string>
    <string name="loading">正在加载中...</string>
    <string name="score_record_item">评分记录项录入</string>
    <string name="current_version">当前版本</string>
    <string name="re_check">复查</string>
    <string name="copy_now">立即复制</string>
    <string name="hint_copy_task_remark">请录入备注信息</string>
    <string name="copy_task_title">确定要复制该主体/任务?</string>
    <string name="add_address_remark">请添加备注/地址信息</string>
    <string name="hint_copy_task_address">请输入详细地址信息</string>
    <string name="modify_remark">修改备注信息</string>
    <string name="modify_now">立即修改</string>
    <string name="input_deduct_standard">输入扣分标准</string>
    <string name="input_deduct_score">输入扣分分值</string>
    <string name="location_current">当前位置信息</string>
</resources>