<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">
    <include
        android:id="@+id/top"
        layout="@layout/layout_top"/>

    <RelativeLayout
        android:id="@+id/rv_oldPwd"
        android:layout_below="@id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_oldPwd"
            style="@style/left_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/old_pwd" />

        <EditText
            android:id="@+id/edit_oldPwd"
            style="@style/edit_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="29px"
            android:inputType="textPassword"
            android:hint="@string/please_input_old_pwd"
            android:layout_toRightOf="@id/tv_oldPwd"
            />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_below="@id/rv_oldPwd"
        android:background="@color/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <RelativeLayout
        android:id="@+id/rv_newPwd"
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_newPwd"
            style="@style/left_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/edit_newPwd"
            style="@style/edit_login"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="29px"
            android:hint="@string/please_input_new_pwd"
            android:layout_toRightOf="@id/tv_newPwd"
            />

    </RelativeLayout>
    <View
        android:id="@+id/divider1"
        android:layout_below="@id/rv_newPwd"
        android:background="@color/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <RelativeLayout
        android:id="@+id/rv_newPwdAgin"
        android:layout_below="@id/divider1"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_newPwdAgain"
            style="@style/left_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/edit_newPwdAgain"
            style="@style/edit_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="29px"
            android:hint="@string/please_input_new_pwd_again"
            android:layout_toRightOf="@id/tv_newPwdAgain"
            android:inputType="textPassword"
            />

    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_below="@id/rv_newPwdAgin"
        android:background="@color/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:id="@+id/btn_save"
        style="@style/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure_modify"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        />

</RelativeLayout>