<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_ppw"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/line_gray"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_save"
            android:padding="10dp"
            android:text="@string/copy_task_title"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="100dp"
            android:padding="10dp"
            android:textColor="@color/txt_main"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/edit_remark"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_rectangle_blue_line"
            android:hint="@string/hint_copy_task_remark"
            android:padding="10dp"
            android:textColor="@color/txt_main"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/edit_address"
            android:visibility="gone"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_copy_task_address"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_rectangle_blue_line"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/txt_main"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray_line"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/next_say"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_sure"
                style="@style/btn_save_no_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0px"
                android:layout_marginRight="0px"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/copy_now"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>